# PicLens

./: .gitignore  AGENTS.md  BuildAndRun.ps1  CMakeLists.txt  CMakePresets.json  CONTEXT.md  DESIGN.md  ImageViewerWin.slnx  LICENSE  PicLens.slnx  README.md  Release.ps1  THIRD_PARTY_NOTICES.txt  Tasks.cs  Test.ps1  WatchAndRun.ps1  qt.conf
.github/workflows/: qt-migration.yml  release.yml
ImageViewerWin/: App.xaml  App.xaml.cs  ImageViewerWin.csproj  ImageViewerWindow.xaml  ImageViewerWindow.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  TitleBarLayout.cs  WindowForeground.cs  app.manifest
ImageViewerWin/Diagnostics/: FileAppLogger.cs  IAppLogger.cs  NullAppLogger.cs
ImageViewerWin/Properties/: launchSettings.json
ImageViewerWin/Services/: UIServices.cs
ImageViewerWin/ViewModels/: FavoriteSidebarItem.cs  FolderTreeItem.cs  ImageViewerWindowViewModel.cs  LibraryTileItem.cs  MainPageViewModel.cs
PicLens/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  AppDataMigration.cs  DropRenamePreviewContent.cs  ImageViewerWindow.xaml  ImageViewerWindow.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PicLens.csproj  Program.cs  TitleBarLayout.cs  WindowForeground.cs  app.manifest
PicLens/Converters/: ImagePathConverter.cs
PicLens/Diagnostics/: FileAppLogger.cs  NullAppLogger.cs
PicLens/Properties/: launchSettings.json
PicLens/Services/: UIServices.cs
PicLens/ViewModels/: FolderNavigationHistory.cs  ImageViewerWindowViewModel.cs  LibraryTileItem.cs  MainPageViewModel.Thumbnails.cs  MainPageViewModel.cs  ViewModelPathRules.cs
PicLens/Views/: MainView.Library.cs  MainView.Viewer.cs  MainView.axaml  MainView.axaml.cs
docs/: README.md  architecture.md  data-migration.md  installer-release.md  native-behavior.md  native-parity.md  performance.md  portable-release.md  product-spec.md  qt-licensing.md  qt-migration.md  qt-parity-audit.md  runtime-contract.md  testing.md
docs/agents/: domain.md  issue-tracker.md
docs/design/: piclens-ui-concept.prompt.md
docs/lore/: README.md
docs/verification/: 2026-06-24.md
installer/: Package.wxs  PicLens.iss  PicLens.wixproj
packaging/: piclens.desktop
poc/qtquick/: CMakeLists.txt  README.md
poc/qtquick/qml/: Main.qml
poc/qtquick/src/: imagemodel.cpp  imagemodel.h  main.cpp  thumbnailprovider.cpp  thumbnailprovider.h
qml/PicLens/: AppIcon.qml  CompactComboBox.qml  FolderTreePane.qml  GalleryTile.qml  LensMark.qml  LibraryPane.qml  Main.qml  Theme.qml  ToolbarButton.qml  ViewerOverlay.qml  ViewerPointerSurface.qml
qt/: CMakeLists.txt
qt/scripts/: audit-msi.ps1  build-linux-portable.sh  build-portable.ps1  measure-performance.ps1  run-windows-cutover-gate.ps1  test-linux-package-lifecycle.sh  test-msi-lifecycle.ps1  verify-data-continuity.ps1
qt/src/infrastructure/: CMakeLists.txt
qt/src/infrastructure/include/piclens/infrastructure/: json_settings_store.h  thumbnail_service.h
qt/src/infrastructure/src/: file_app_logger.cpp  file_operation_service.cpp  json_settings_store.cpp
qt/tests/presentation/: CMakeLists.txt  tst_library_controller.cpp  tst_thumbnail_coordinator.cpp  tst_viewer_controller.cpp
scripts/: BuildAndRun.ps1  BuildAndRun.sh  BuildInstaller.ps1  Installer.cs  Release.ps1  Release.sh  RunUiTests.ps1  Tasks.cs  Test.ps1  Test.sh  audit-msi.ps1  build-deb.sh  build-linux-package.sh  build-linux-portable.sh  build-msi.ps1  build-portable.ps1  build-rpm.sh  measure-performance.ps1  run-windows-cutover-gate.ps1  test-linux-package-lifecycle.sh  test-msi-lifecycle.ps1  verify-data-continuity.ps1
src/ImageViewerWin.Application/: ImageViewerWin.Application.csproj
src/ImageViewerWin.Infrastructure/: ImageViewerWin.Infrastructure.csproj
src/PicLens.Application/: PicLens.Application.csproj
src/PicLens.Infrastructure/: PicLens.Infrastructure.csproj
src/PicLens.Presentation/: PicLens.Presentation.csproj
src/app/: CMakeLists.txt
src/app/include/piclens/app/: app_controller.h  qml_registration.h
src/app/resources/windows/: PicLens.rc.in
src/app/src/: app_controller.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/include/piclens/core/: image_format_rules.h  list_item_sorter.h  models.h  path_rules.h  settings_rules.h
src/core/src/: drag_interaction_rules.cpp  list_item_sorter.cpp  path_rules.cpp  settings_rules.cpp  zoom_math.cpp
src/presentation/: CMakeLists.txt
src/presentation/include/piclens/presentation/: file_operation_controller.h  library_controller.h  library_item_model.h  thumbnail_coordinator.h  viewer_controller.h
src/presentation/src/: file_operation_controller.cpp  folder_tree_model.cpp  library_controller.cpp  library_item_model.cpp  thumbnail_coordinator.cpp
tests/: Directory.Build.props
tests/ImageViewerWin.Application.Tests/: FileRenamePlannerTests.cs  ImageViewerWin.Application.Tests.csproj
tests/ImageViewerWin.Core.Tests/: DomainParityTests.cs  ImageViewerWin.Core.Tests.csproj
tests/ImageViewerWin.Infrastructure.Tests/: FavoriteFolderServiceTests.cs  FileOperationServiceTests.cs  FolderScannerTests.cs  ImageDataServiceTests.cs  ImageViewerWin.Infrastructure.Tests.csproj  JsonSettingsStoreTests.cs  TempWorkspace.cs  ThumbnailServiceTests.cs
tests/ImageViewerWin.ViewModels.Tests/: AppLoggingTests.cs  ImageViewerWin.ViewModels.Tests.csproj  ImageViewerWindowLocalizationTests.cs  MainPageInteractionTests.cs  MainPageSearchAndSelectionActionTests.cs  MainPageSelectionTests.cs  MainPageTextTests.cs  MainPageViewModelDiagnosticLoggingTests.cs  MainPageViewModelFolderTreeTests.cs  MainPageViewModelSortTests.cs  (+2 more)
tests/app/: CMakeLists.txt  check_runtime_data.cmake  tst_app_controller.cpp
tests/core/: CMakeLists.txt
tests/infrastructure/: CMakeLists.txt  platform_file_manager_smoke.cpp  tst_file_operations.cpp  tst_folder_scanner.cpp  tst_persistence.cpp  tst_thumbnail_service.cpp
tests/qml/: CMakeLists.txt  tst_components.qml  tst_qml_main.cpp
tools/: RunUiTests.ps1  generate_app_icon.py
(+159 files in other folders)
